Navigation and fontage awesome.

--- a/_source/_includes/navigation.html
+++ b/_source/_includes/navigation.html
@@ -1,7 +1,19 @@
 <nav role="navigation">
   <ul class="main-navigation">
-    <li><a href="/journal/"><strong>Journal</strong> <span>Videos from the present. <i>Words from the past.</i></span></a></li>
-    <li><a href="/live/"><strong>Live</strong> <span>Making a fool of myself. <i>And it's all live.</i></span></a></li>
-    <li><a href="/about/"><strong>About</strong> <span>Written in the stars. <i>(It's not that interesting.)</i></span></a></li>
+    <li class="section-journal">
+      <a href="/journal/">
+        <strong class="ss-lightbulbon">Journal</strong> <span>Today's videos. <i>Yesteryear's words.</i></span>
+      </a>
+    </li>
+    <li class="section-live">
+      <a href="/live/">
+        <strong class="ss-video">Live</strong> <span>Making a fool of myself. <i>And it's all live.</i></span>
+      </a>
+    </li>
+    <li class="section-about">
+      <a href="/about/">
+        <strong class="ss-flash">About</strong> <span>Written in the stars. <i>It's not that interesting.</i></span>
+      </a>
+    </li>
   </ul>
 </nav>
