--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -37,5 +37,6 @@
   <script src="/javascripts/application.js"></script>
   <script src="/javascripts/twitch.js"></script>
   <script src="/javascripts/youtube.js"></script>
+  <script src="/javascripts/fonts.js"></script>
 </body>
 </html>
