--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,235 +1,2 @@
-@import "base";
-@import "fonts";
+@import "components";
 
-// Base placeholders.
-%full-span {
-  margin: 0 0 - $grid-padding;
-  padding: 0 $grid-padding;
-}
-
-//
-body {
-  margin: 0;
-
-  &:after {
-    content: "mobile";
-    display: none;
-  }
-}
-
-.page {
-  @include container;
-  @include susy-grid-background;
-  overflow: hidden;
-  font-family: $font-family-sans;
-  font-size: 16px;
-}
-
-.header {
-  @extend %full-span;
-  position: relative;
-  padding-top: 1em; padding-bottom: 1em;
-
-  background: $brand-youtube;
-
-  .site-logo {
-    @extend .zeta;
-    margin: 0;
-
-    text-align: center;
-
-    a {
-      color: #fff;
-      text-decoration: none;
-      text-transform: uppercase;
-    }
-  }
-}
-
-.footer {
-  @extend %full-span;
-  color: white;
-  background: #222;
-
-  h1 {
-    color: white;
-    @extend .delta;
-  }
-}
-
-.copyright {
-  @extend %full-span;
-  color: white;
-  background: #333;
-
-  p {
-    text-align: center;
-  }
-}
-
-.entry {
-  .entry-title {
-    @extend %normal-wrap;
-    @extend .delta;
-    margin: 1rem 0;
-  }
-  .entry-metadata {
-    @include reset-table;
-    margin-bottom: 1em;
-    width: 100%;
-    border: 1px solid #eee;
-    border-width: 1px 0;
-    font-size: 14px;
-    td {
-      padding: 0.5em 1em;
-    }
-    .episode {
-      width: 60%;
-      border-right: 1px solid #eee;
-      font-weight: bold;
-    }
-    .views {
-      border-bottom: 1px solid #eee;
-    }
-    .entry-date {
-      display: block;
-      color: rgba(black, 0.3);
-      font-size: 11px;
-      text-transform: uppercase;
-    }
-  }
-  .entry-content {
-    font-family: $font-family;
-  }
-  .yt-description {
-    border-top: 1px solid #eeeeee;
-    font-family: $font-family-sans;
-    font-size: 13px;
-  }
-  .yt-description-header {
-    @extend .zeta;
-  }
-}
-
-.embed-container {
-  @extend %full-span;
-  background-color: black;
-  position: relative;
-  // padding-bottom: 56.25%;
-  padding-top: 30px; padding-bottom: 52%;
-  height: 0;
-  overflow: hidden;
-
-  iframe, object, embed {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-  }
-}
-
-
-$total-columns    : 6;
-$medium-columns   : 8;
-$large-columns    : 12;
-
-$container-width  : container-outer-width($large-columns);
-
-$anchor : 1;
-$side   : $total-columns - $anchor;
-
-[role="navigation"],
-[role="main"],
-[role="complementary"] {
-  @include transition(.3s margin ease);
-}
-
-[role="navigation"] {
-  background: #222;
-  height: 30em;
-}
-
-[role="navigation"] {
-  @include span-columns($side);
-  position: relative;
-  left: - $grid-padding;
-  margin-left: -100%; margin-right: 0;
-  .show-left & {
-    margin-left: 0; }
-}
-
-.main-navigation {
-  @include reset-box-model;
-
-  li {
-    @include clearfix;
-    border-bottom: 1px solid rgba(#fff, 0.05);
-    line-height: 1;
-    padding: 1em;
-  }
-
-  a {
-    color: #fff;
-    text-decoration: none;
-  }
-  strong {
-    display: block;
-    float: left;
-    text-transform: uppercase;
-  }
-  span {
-    float: right;
-
-    color: rgba(#fff, 0.3);
-    font-size: 13px;
-    text-align: right;
-
-    i {
-      display: block;
-      font-style: normal;
-    }
-  }
-}
-
-
-[role="main"] {
-  @include span-columns($total-columns);
-  margin-right: 0;
-  .show-left & { margin-right: - space($side); }
-  .show-right & { margin-left: - space($side); }
-}
-
-[role="complimentary"] {
-  @include span-columns($side omega);
-  margin-right: -100%;
-  .show-right & { margin-right: 0; }
-}
-
-html,
-body.show-left,
-.show-left .page,
-.show-left [role="navigation"] {
-  height: 100%
-}
-
-.toggle {
-  position: relative;
-  top: -2px;
-
-  color: #fff;
-  text-decoration: none;
-}
-[href="#left"] {
-  float: left;
-}
-
-.main-navigation {
-  strong:before {
-    position: relative;
-    top: 3px;
-    padding-right: 6px;
-  }
-}
-
-.section-journal strong:before { color: $brand-youtube; }
-.section-live strong:before { color: $brand-twitch; }
-.section-about strong:before { color: #fcd20b; }
