--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -14,6 +14,7 @@
 
   {% capture canonical %}{{ site.url }}{% if site.permalink contains ".html" %}{{ page.url }}{% else %}{{ page.url | remove:"index.html" }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
+  <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
   <link href="{{ root_url }}/stylesheets/screen.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 </head>
