Lots of something. Lots of it.

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -7,9 +7,11 @@
       {% include header.html %}
       {{ content }}
     </div>
+    <hr>
     <footer class="footer" role="complimentary">
       <div class="lower-hero">
         <!-- Throw a logo in here. -->
+        <img src="https://pbs.twimg.com/profile_images/378800000760682209/b065d3b7e642ddda1155741e3c3ccd80_bigger.jpeg">
         <p>This has been <a href="http://bryanvelo.so">Bryan Veloso</a>'s Avalonstar.</p>
       </div>
       <div class="">
