--- a/_source/_layouts/video.html
+++ b/_source/_layouts/video.html
@@ -4,7 +4,7 @@ single: true
 ---
 
 <div class="wrapper">
-<article class="entry hentry" role="article">
+<article class="entry hentry video-entry" role="article">
   <section class=""></section>
 
   <div class="embed-container">
