--- a/_source/_layouts/prose.html
+++ b/_source/_layouts/prose.html
@@ -4,9 +4,16 @@ single: true
 ---
 
 <div>
-<article class="hentry" role="article">
+<article class="entry hentry prose-entry" role="article">
   <section class=""></section>
-  <header></header>
+  <header class="entry-header">
+    <time class="entry-published">{{ page.date | date: "%B %-d, %Y" }}</time>
+    <h1 class="entry-title">{{ page.title | widont }}</h1>
+  </header>
   <div class="entry-content">{{ content | widont }}</div>
 </article>
+
+<div class="juke">
+{% include post/juke.html %}
+</div>
 </div>
