--- a/_source/_layouts/prose.html
+++ b/_source/_layouts/prose.html
@@ -7,13 +7,11 @@ single: true
 <article class="entry hentry prose-entry" role="article">
   <section class=""></section>
   <header class="entry-header">
-    <time class="entry-published">{{ page.date | date: "%B %-d, %Y" }}</time>
+    <div class="entry-metadata">
+      <time class="entry-published">{{ page.date | date: "%B %-d, %Y" }}</time>
+    </div>
     <h1 class="entry-title">{{ page.title | widont }}</h1>
   </header>
   <div class="entry-content">{{ content | widont }}</div>
 </article>
-
-<div class="juke">
-{% include post/juke.html %}
-</div>
 </div>
