Axe the toggle for now.

--- a/_source/_includes/header.html
+++ b/_source/_includes/header.html
@@ -1,4 +1,4 @@
 <header class="header">
-  <a class="toggle" href="#left"><i class="ss-icon">rows</i></a>
+  <!-- <a class="toggle" href="#left"><i class="ss-icon">rows</i></a> -->
   <h1 class="site-logo"><a href="/">Avalonstar</a></h1>
 </header>
