--- a/_source/_includes/navigation.html
+++ b/_source/_includes/navigation.html
@@ -2,17 +2,20 @@
   <ul class="main-navigation">
     <li class="section-journal">
       <a href="/journal/">
-        <strong class="ss-lightbulbon">Journal</strong> <span>Today's videos. <i>Yesteryear's words.</i></span>
+        <span class="ss-icon ss-notebook"></span>
+        <strong>Journal</strong> <span>Today's fluff. <i>(Yesteryear's... fluff.)</i></span>
       </a>
     </li>
     <li class="section-live">
       <a href="/live/">
-        <strong class="ss-video">Live</strong> <span>Making a fool of myself. <i>And it's all live.</i></span>
+        <span class="ss-icon ss-video"></span>
+        <strong>Live</strong> <span>Making a fool of myself. <i>(And it's all live.)</i></span>
       </a>
     </li>
     <li class="section-about">
       <a href="/about/">
-        <strong class="ss-flash">About</strong> <span>Written in the stars. <i>It's not that interesting.</i></span>
+        <span class="ss-icon ss-flash"></span>
+        <strong>About</strong> <span>Written in the stars. <i>(It's not that interesting.)</i></span>
       </a>
     </li>
   </ul>
