Different Jekyll URL.

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -32,7 +32,7 @@
         -->
       </div>
       <div class="copyright">
-        <p><strong>&copy; 2000-2013.</strong> Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source</a>.</p>
+        <p><strong>&copy; 2000-2013.</strong> Powered by <a href="https://github.com/jekyll/jekyll">Jekyll</a> and <a href="http://heroku.com">Heroku</a>. <a href="https://github.com/bryanveloso/avalonstar">Get the source</a>.</p>
       </div>
     </footer>
     {% if page.next.url %}
