Show off the logotype.

--- a/_source/_includes/head.html
+++ b/_source/_includes/head.html
@@ -17,4 +17,5 @@
   <link rel="stylesheet" href="//cloud.typography.com/7547452/674522/css/fonts.css">
   <link href="{{ root_url }}/stylesheets/screen.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="{{ root_url }}/javascripts/jquery.fittext.js"></script>
 </head>
