--- a/_source/_includes/header.html
+++ b/_source/_includes/header.html
@@ -1,6 +1,7 @@
 <header class="header">
   <a class="toggle" href="#left"><span class="ss-icon ss-menu"></span></a>
-  <h1 class="site-logo {% if page.category %}sans-star{% endif %}"><a href="/">Avalonstar</a></h1>
+  <h1 class="site-logo {% if page.category %}sans-star{% endif %}">Avalonstar</h1>
+  <div class="site-logotype">Avalonstar</div>
   <div class="icon-contain">
     {% if page.category == "prose" %}<span class="ss-icon ss-notebook"></span>{% endif %}
     {% if page.category == "video" %}<span class="ss-icon ss-video"></span>{% endif %}
