--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -37,7 +37,11 @@
     </footer>
     {% if page.next.url %}
     <div class="juke juke-next">
-      <a class="right" href="{{ page.next.url }}" title="Next: {{ page.next.title }}">{{ page.next.title }}</a>
+      <a class="right" href="{{ page.next.url }}" title="Next: {{ page.next.title }}">
+        <span class="next-up">Next Up, {{ page.next.category }}.</span>
+        <h2>{{ page.next.title }}</h2>
+        <span class="ss-icon ss-navigatedown"></span>
+      </a>
     </div>
     {% endif %}
   </div>
