--- a/sass/sections/_entries.scss
+++ b/sass/sections/_entries.scss
@@ -1,5 +1,11 @@
 $width: ms(13);
 
+%container {
+  margin-left: auto;
+  margin-right: auto;
+  width: $width;
+}
+
 .entry {
   p {
     font-size: ms(1);
