Stylesheet progress for the ages.

--- a/sass/components/_variables.scss
+++ b/sass/components/_variables.scss
@@ -22,7 +22,7 @@ $grid-padding: $gutter-width;
 $font-family-primary: 'Whitney SSm A', 'Whitney SSm B';
 $font-family-secondary: 'Gotham SSm A', 'Gotham SSm B';
 $font-family-tertiary: 'Tungsten A', 'Tungsten B';
-$font-family-logotype: '';
+$font-family-logotype: 'Idlewild SSm A', 'Idlewild SSm B';
 
 $font-size-base: $base-size;
 $font-size-large: ms(1) !default;
