--- a/sass/components/_scaffolding.scss
+++ b/sass/components/_scaffolding.scss
@@ -4,6 +4,7 @@
     text-rendering: optimizeLegibility;
 }
 
+html, body { width: 100%; height: 100%; }
 html { -webkit-tap-highlight-color: rgba(#000, 0); }
 body {
   color: $body-font-color;
