--- a/sass/sections/_home.scss
+++ b/sass/sections/_home.scss
@@ -8,9 +8,12 @@
 
   .tile {
     flex: 1;
-    color: #FFF;
   }
-
+  .ss-icon {
+    display: block;
+    color: #FFF;
+    font-size: 32px;
+  }
 }
 
 
@@ -21,33 +24,44 @@
   background-position: center center;
   background-size: 200px;
 
-  &:before {
-    @include position(absolute, 0 0 0 0);
-    top: calc(50% - 60px); left: calc(50% - 60px);
-    content: '';
-    width: 120px; height: 120px;
+  // &:before {
+  //   @include position(absolute, 0 0 0 0);
+  //   top: calc(50% - 60px); left: calc(50% - 60px);
+  //   content: '';
+  //   width: 120px; height: 120px;
 
-    background: #161B21;
-    border-radius: 50%;
-    box-shadow: 0 1px 0 #272E37;
-  }
+  //   background: #161B21;
+  //   border-radius: 50%;
+  //   box-shadow: 0 1px 0 #272E37;
+  // }
   .site-logo {
     @include position(absolute, 0px 0px 0px 0px);
     height: auto;
     background-position: center center;
     background-size: 200px;
   }
+}
+.secondary-introduction {
+  display: flex;
+  flex-direction: column;
+
+  .site-established {
+    display: block;
+    color: #646D77;
+    font-family: $font-family-secondary;
+    font-size: ms(-2);
+    font-weight: 700;
+  }
   .site-logotype {
     color: #FFF;
     letter-spacing: -2px;
+    line-height: 1;
     font-size: 32px;
   }
 }
-.secondary-introduction {
-}
 .hero {
   margin: 0 auto;
-  width: ms(11);
+  width: ms(13);
   text-align: center;
 
   p {
@@ -67,6 +81,49 @@
   }
 }
 
+
+.home {
+  [role="navigation"] {
+    margin-top: 0;
+    padding: 1.777rem 0;
+  }
+  .ss-navigatedown {
+    padding: 1rem 0;
+    font-size: 32px;
+    text-align: center;
+  }
+}
+.recents {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  margin: 0 auto;
+  width: ms(13);
+
+  .ss-icon {
+    color: #454d57;
+  }
+}
+.recent-item {
+  flex: 1;
+  margin: 1rem;
+  padding-top: 1rem;
+  border-top: 1px solid #272E37;
+  text-align: center;
+}
+.recent-title {
+  font-family: $font-family-tertiary;
+  margin: 0;
+
+  a {
+    color: #FFF;
+    text-decoration: none;
+  }
+}
+.recent-category {
+  font-family: $font-family-secondary;
+  font-size: ms(-1);
+}
 
 
 
