--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -33,9 +33,11 @@
   flex: 1;
   padding: 0 1rem;
 
-  border-left: 1px solid #DFE3E8;
+  border: 0px solid #DFE3E8;
   text-align: left;
 }
+.this-has-been { border-left-width: 1px; }
+.what-is { border-right-width: 1px; }
 
 .copyright,
 .copyright a {
